use post and form to guess

--- a/views/game.pug
+++ b/views/game.pug
@@ -3,6 +3,8 @@ html
     title= 'Hangman'
   body
     h1= displayWord
-    select
-      each letter in unguessedLetters
-        option(value=letter) #{letter}
+    form(action='' method='post')
+      select(name='guess')
+        each letter in unguessedLetters
+          option(value=letter) #{letter}
+        input(type='submit')
